src/test/ui/parser/issues/issue-84148-2.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-84148-2.rs:4:16
   |
LL | fn f(t:for<>t?
   |     -          ^
   |     |
   |     unclosed delimiter

error: expected parameter name, found `?`
  --> $DIR/issue-84148-2.rs:4:14
   |
LL | fn f(t:for<>t?
   |              ^ expected parameter name

error: expected one of `(`, `)`, `+`, `,`, `::`, or `<`, found `?`
  --> $DIR/issue-84148-2.rs:4:14
   |
LL | fn f(t:for<>t?
   |              ^
   |              |
   |              expected one of `(`, `)`, `+`, `,`, `::`, or `<`
   |              help: missing `,`

error: expected one of `->`, `where`, or `{`, found `<eof>`
  --> $DIR/issue-84148-2.rs:4:16
   |
LL | fn f(t:for<>t?
   |                ^ expected one of `->`, `where`, or `{`

error: aborting due to 4 previous errors

